@@ -2,6 +2,8 @@ Version Next
 
     - Fix bug in FileStreamRepository when filename is less than 3 characters
     - Added PersistentObjectSchemaUpdater.setTransformerFactory()
+    - Added option for AsyncOutputStream buffer to grow automatically
+    - Added ByteBufferInputStream and ByteBufferOutputStream
 
 Version 1.0.964 Released January 28, 2015
 
